# PPCA-VINS

./: .clang-format  .gitignore  .gitmodules  README.md  index.md
camera_models/: CMakeLists.txt  package.xml  readme.md
camera_models/src/: intrinsic_calib.cc
camera_models/src/calib/: CameraCalibration.cc
camera_models/src/camera_models/: CameraFactory.cc  CostFunctionFactory.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
camera_models/src/chessboard/: Chessboard.cc
camera_models/src/gpl/: gpl.cc
camera_models/src/sparse_graph/: Transform.cc
config/: cam.yaml  cam_360p.yaml  cam_450p.yaml  stereo.yaml  stereo_360p.yaml  stereo_450p.yaml  vins_rviz_config.rviz
config/A3_ptgrey/: a3_ptgrey_mono_imu_config.yaml  a3_ptgrey_stereo_config.yaml  a3_ptgrey_stereo_imu_config.yaml  a3_ptgrey_stereo_imu_config_backup.yaml  left.yaml  right.yaml
config/cdd/: S1_01.yaml  S1_02.yaml  S2_01.yaml  S2_02.yaml  ch2_01.yaml  dark.yaml  mirror.yaml  stereo.yaml  stereo_450p.yaml
config/euroc/: V1_01.yaml  V1_01_simple.yaml  V1_02.yaml  V1_03.yaml  V1_03_difficult.yaml  V2_01.yaml  V2_02.yaml  V2_03.yaml  cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  cam1_pinhole.yaml  cam_pinhole.yaml  euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
config/kitti_odom/: cam03.yaml  cam04-12.yaml  kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml  kitti_config13-21.yaml
config/kitti_raw/: cam_09_30.yaml  kitti_09_30_config.yaml  kitti_10_03_config.yaml
config/mynteye/: left_mei.yaml  mynteye_mono_imu_config.yaml  mynteye_stereo_config.yaml  mynteye_stereo_imu_config.yaml  right_mei.yaml
config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml
config/simulation/: cam0_mei.yaml  cam1_mei.yaml  simulation_config.yaml
config/vi_car/: cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  cam1_pinhole.yaml  vi_car.yaml
depth_pred/: CMakeLists.txt  package.xml
depth_pred/include/: depth_pred_node.h
depth_pred/model/: checkpoint.tar
depth_pred/scripts/: pred.py
depth_pred/src/: depth_pred_node.cpp
docker/: Makefile
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  tic_toc.h  utility.h
noise_adder/: CMakeLists.txt  package.xml
noise_adder/launch/: big_noise.launch  small_noise.launch
noise_adder/src/: noise_adder_node.cpp
prior_fusion/: CMakeLists.txt  package.xml
prior_fusion/include/: factors.h  prior_opt.h
prior_fusion/launch/: fusion.launch
prior_fusion/src/: prior_opt.cpp  prior_opt_node.cpp
prior_locate/: CMakeLists.txt  package.xml
prior_locate/include/: frames.h  locater.h
prior_locate/launch/: locate.launch
prior_locate/src/: depth_frame.cpp  locater.cpp  ndt_frame.cpp  prior_locate_node.cpp
tools/: backtrace.dump  evaluate.sh  extract_gt_traj.py  multi_msckf.sh  multi_trials.sh
tools/euroc_rect/: CMakeLists.txt  euroc.yaml
tools/euroc_rect/src/: euroc_rect.cpp
utils/: path.json  publish_gicp_path.py  record_gicp_path.py
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: vins.launch  vins_all.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  utility.cpp  (+4 more)
(+17 files in other folders)
